package S202220005;

public class Barrier extends Being {

    public void open() {
        System.out.println("I opened. ");
    };

    public void close() {
        System.out.println("I closed. ");
    };
}
