package S202220005;

public class Being {
    public void receiveMagic(Magic magic){
        System.out.println("I received " + magic.GetKind() + " magic.");
    }
}
