package S202220005;

public class Magic {
    String kind;
    Magic (String n){
        kind = n;
    }
    public String GetKind(){
        return kind;
    }
}
